BUG Fix wrong mouse cursor for description text in upload field area BUG Fix error messages overflowing the gallery-item

--- a/client/src/components/GalleryItem/GalleryItem.scss
+++ b/client/src/components/GalleryItem/GalleryItem.scss
@@ -196,7 +196,7 @@ $gallery-item-label-height: 40px;
   top: calc(50% - (#{$gallery-item-label-height} / 2));
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  max-height: calc(50% - #{$gallery-item-label-height});
+  max-height: calc(100% - #{$gallery-item-label-height});
   overflow: hidden;
   width: 90%;
   color: $white;
