--- a/client/src/components/UploadField/UploadField.scss
+++ b/client/src/components/UploadField/UploadField.scss
@@ -63,7 +63,7 @@
   display: inline-block;
   text-align: center;
 
-  a {
+  a, button {
     cursor: pointer;
   }
 
